--- a/manifests/demo.yml
+++ b/manifests/demo.yml
@@ -31,7 +31,7 @@ spec:
     spec:
       containers:
       - name: primary
-        image: index.docker.io/pghidiy/spin-kub-v2-demo:1.3.1
+        image: index.docker.io/pghidiy/spin-kub-v2-demo:release-1.3.1
         ports:
         - containerPort: 8000
         readinessProbe:
